Bruh, level up those boomer Servlets to Spring Boot. Still mid tho.