@@ -1,29 +1,22 @@
 package com.cosmoport.core.persistence;
 
 import com.cosmoport.core.dto.request.CreateEventTypeCategoryRequestDto;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.context.SpringBootTest;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-class EventTypeCategoryPersistenceServiceTest extends PersistenceTest {
-    private EventTypeCategoryPersistenceService service;
+@SpringBootTest
+@ClearDatabase
+class EventTypeCategoryPersistenceServiceTest {
+
+    @Autowired
     private TranslationPersistenceService translationPersistenceService;
 
-    @BeforeEach
-    void createPersistenceService() {
-        super.before();
-        var i18nPersistenceService = new I18nPersistenceService(getLogger(), getDataSourceProvider());
-        translationPersistenceService = new TranslationPersistenceService(
-                getDataSourceProvider(),
-                i18nPersistenceService,
-                new LocalePersistenceService(getLogger(), getDataSourceProvider())
-        );
-
-        service = new EventTypeCategoryPersistenceService(
-                getLogger(), getDataSourceProvider(), i18nPersistenceService, translationPersistenceService);
-    }
+    @Autowired
+    private EventTypeCategoryPersistenceService service;
 
     @Test
     @DisplayName("Should be able to execute getAll()")
@@ -50,7 +43,7 @@ class EventTypeCategoryPersistenceServiceTest extends PersistenceTest {
 
         assertAll(
                 () -> assertTrue(result.getId() > 0),
-                () -> assertEquals(rq.name(), trs.get(0).getText()),
+                () -> assertEquals(rq.name(), trs.getFirst().getText()),
                 // same names are not allowed
                 () -> assertThrows(RuntimeException.class, () -> service.create(rq))
         );
