@@ -2,28 +2,24 @@ package com.cosmoport.core.persistence;
 
 import com.cosmoport.core.dto.TranslationDto;
 import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.context.SpringBootTest;
 
 import java.util.Optional;
 
-final class TranslationPersistenceServiceTest extends PersistenceTest {
+@SpringBootTest
+@ClearDatabase
+final class TranslationPersistenceServiceTest {
+
+    @Autowired
     private TranslationPersistenceService translationPersistenceService;
-
-    @BeforeEach
-    void setService() {
-        super.before();
-
-        translationPersistenceService = new TranslationPersistenceService(
-                getDataSourceProvider(), new I18nPersistenceService(getLogger(), getDataSourceProvider()),
-                new LocalePersistenceService(getLogger(), getDataSourceProvider()));
-    }
 
     @Test
     @DisplayName("Should be able to execute getAllByLocaleId()")
     void getAllByLocaleId() {
-        final TranslationDto translation = translationPersistenceService.getAllByLocaleId(1).get(0);
+        final TranslationDto translation = translationPersistenceService.getAllByLocaleId(1).getFirst();
 
         Assertions.assertEquals(1, translation.getI18n().getId());
     }
